--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <!-- CSS dependencies -->
   <link rel="stylesheet" href="dash.css">
   <link rel="stylesheet" href="elegant.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    type="text/css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <!-- Script: Make my navbar transparent when the document is scrolled to top -->
   <script src="js/navbar-ontop.js"></script>
   <!-- Script: Animated entrance -->
@@ -24,9 +23,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-md fixed-top bg-dark navbar-dark">
     <div class="container">
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-        data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
       <div class="collapse navbar-collapse justify-content-center" id="navbar2SupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item mx-2">
@@ -37,8 +34,7 @@
     </div>
   </nav>
   <!-- Cover -->
-  <div class="d-flex align-items-center py-5 photo-overlay cover"
-    style="background-image: url(&quot;assets/BGs/ethereum-art.jpg&quot;); background-position: center; background-size: cover; background-repeat: no-repeat;">
+  <div class="d-flex align-items-center py-5 photo-overlay cover" style="	background-image: url(assets/BGs/ethereum-art.jpg);	background-position: center;	background-size: cover;	background-repeat: no-repeat;">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -46,28 +42,22 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <div class="p-2"
-            style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
+          <div class="p-2" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
             <button id="connectWallet" class="btn btn-dark shadowed rounded-0 btn-lg">Connect wallet</button>
-            <button id="disconnectWallet" class="btn btn-dark shadowed rounded-0"
-              style="display: none;">Disconnect</button>
+            <button id="disconnectWallet" class="btn btn-dark shadowed rounded-0" style="display: none;">Disconnect</button>
             <div class="nftminting" style="display: none;">
               <div class="row">
                 <div class="col-md-4 col-4" style="	min-width: 369px;">
                   <div class="p-3 col-md-12" style="">
                     <div class="card">
-                      <div class="card-body p-3"
-                        style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+                      <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
                         <h4>Scratcher Controls</h4>
                         <div class="walletStats">
                           <p class="walletbalance">Your Balance: <span class="bnbBalanceVal">0</span> BNB</p>
                           <p class="nftOwned"><span class="numOwnedNft">0</span> Nfts Owned</p>
-                          <p class="reflectionBalance">unclaimed reflections: <span class="numreflectbalance">0</span>
-                            BNB</p>
-                          <button id="distributor" class="btn btn-dark shadowed rounded-0"
-                            onclick="collectreflects()">Collect reflections in BNB</button>
-                          <button id="collectReflectionsInGuestToken" class="btn btn-dark shadowed rounded-0"
-                            disabled="true" style="display: none;">Collect reflections in Guest Token</button>
+                          <p class="reflectionBalance">unclaimed reflections: <span class="numreflectbalance">0</span> BNB</p>
+                          <button id="collectReflectsInBeans" class="btn btn-dark shadowed rounded-0" onclick="collectreflects()">Collect reflections in BNB</button>
+                          <button id="collectReflectionsInGuestToken" class="btn btn-dark shadowed rounded-0" disabled="true" style="display: none;">Collect reflections in Guest Token</button>
                         </div>
                       </div>
                     </div>
@@ -76,8 +66,7 @@
                 <div class="col-md-4 col-4" style="	min-width: 369px;">
                   <div class="p-3 col-md-12 align-items-center" style="">
                     <div class="card">
-                      <div class="card-body p-3"
-                        style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+                      <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
                         <h4>NFT Rewards Utility</h4>
                         <div class="RewardHolders p-2">
                           <p class="holdersrewards"><span>NFT Holders to Reward</span><br>
@@ -87,9 +76,7 @@
                             <input id="bnbRewardAmount" type="number" min="0.01" step="0.01">
                           </p>
                           <p class="rewardtoken"><span>Input Token to Reward</span>
-                            <input id="RewardToken" type="text"><br><button id="RewardHolders"
-                              class="btn btn-dark shadowed rounded-0" onclick="rewardHolders()">Reward Holders in
-                              Token</button>
+                            <input id="RewardToken" type="text"><br><button id="RewardHolders" class="btn btn-dark shadowed rounded-0" onclick="rewardHolders()">Reward Holders in Token</button>
                           </p>
                         </div>
                       </div>
@@ -101,16 +88,14 @@
           </div>
         </div>
         <div class="col-md-6">
-          <div class=" p-2"
-            style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
+          <div class=" p-2" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
             <a class="btn btn-dark btn-lg" href="#">The Other Button</a>
             <div class="nftminting" style="display: none;">
               <div class="row">
                 <div class="col-md-4 col-4" style="	min-width: 369px;">
                   <div class="p-3 col-md-12" style="">
                     <div class="card">
-                      <div class="card-body p-3"
-                        style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+                      <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
                         <h4>The Other Button Stuff</h4>
                       </div>
                     </div>
@@ -119,8 +104,7 @@
                 <div class="col-md-4 col-4" style="	min-width: 369px;">
                   <div class="p-3 col-md-12 align-items-center" style="">
                     <div class="card">
-                      <div class="card-body p-3"
-                        style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+                      <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
                         <h4>NFT Rewards Utility</h4>
                       </div>
                     </div>
@@ -138,7 +122,7 @@
       <div class="row">
         <div class="col-md-12 text-center d-md-flex align-items-center">
           <img class="img-fluid d-block rounded-circle" src="assets/imgs/grobat-logo.png" width="60">
-          <p class="mb-1 py-1">Grobat Technologies</p>
+          <p class="py-1 m-1 mb-0">Grobat Technologies</p>
         </div>
       </div>
     </div>
@@ -151,22 +135,16 @@
   <!-- Footer -->
   <!-- JavaScript dependencies -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <!-- Script: Smooth scrolling between anchors in a same page -->
   <script src="js/smooth-scroll.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" crossorigin="anonymous"
-    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" crossorigin="anonymous" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"></script>
   <script type="text/javascript" src="../js/notify.min.js"></script>
   <script type="text/javascript" src="https://unpkg.com/web3@1.2.11/dist/web3.min.js"></script>
   <script type="text/javascript" src="https://unpkg.com/web3modal@1.9.7/dist/index.js"></script>
   <script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
-  <script type="text/javascript"
-    src="https://unpkg.com/@walletconnect/web3-provider@1.7.8/dist/umd/index.min.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/@walletconnect/web3-provider@1.7.8/dist/umd/index.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
 
