--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <script src="js/navbar-ontop.js"></script>
   <!-- Script: Animated entrance -->
   <script src="js/animate-in.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body class="text-center">
@@ -44,13 +44,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12" style="">
           <div class="p-2" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
             <button id="connectWallet" class="btn btn-dark shadowed rounded-0 btn-lg">Connect wallet</button>
             <button id="disconnectWallet" class="btn btn-dark shadowed rounded-0" style="display: none;">Disconnect</button>
             <div class="dashstats" style="display: none;">
               <div class="row">
-                <div class="col-md-4 col-4" style="	min-width: 369px;">
+                <div class="col-md-4 col-4" style="	min-width: 369px;" >
                   <div class="p-3 col-md-12" style="">
                     <div class="card">
                       <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
@@ -63,31 +63,10 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-4 col-4" style="	min-width: 369px;">
-                  <div class="p-3 col-md-12 align-items-center" style="">
-                    <div class="card">
-                      <div class="card-body p-3" style=" background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-                        <h4>Rewards Utility</h4>
-                        <div class="RewardHolders p-2">
-                          <p class="holdersrewards"><span>NFT Holders to Reward</span><br>
-                            <input id="holderRewardAmount" type="number" min="1" max="50" value="1">
-                          </p>
-                          <p class="rewardamount"><span> Amount to Reward (BNB)</span><br>
-                            <input id="bnbRewardAmount" type="number" min="0.01" step="0.01">
-                          </p>
-                          <p class="rewardtoken"><span>Input Token to Reward</span>
-                            <input id="RewardToken" type="text"><br><button id="RewardHolders" class="btn btn-dark shadowed rounded-0" onclick="rewardHolders()">Reward Holders in Token</button>
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
         </div>
-        
       </div>
     </div>
   </div>
@@ -120,7 +99,6 @@
   <script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
   <script type="text/javascript" src="https://unpkg.com/@walletconnect/web3-provider@1.7.8/dist/umd/index.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
-  
 </body>
 
 </html>
