--- a/index.html
+++ b/index.html
@@ -37,23 +37,23 @@
     </div>
   </nav>
   <!-- Cover -->
-  <div class="d-flex align-items-center py-5 photo-overlay cover" style="	background-image: url(assets/BGs/ethereum-art.jpg);	background-position: center;	background-size: cover;	background-repeat: no-repeat;">
+  <div class="d-flex align-items-center py-5 photo-overlay cover" style=" background-image: url(assets/BGs/ethereum-art.jpg); background-position: center;	background-size: cover;	background-repeat: no-repeat;" >
     <div class="container">
       <div class="row">
         <div class="col-md-12">
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12" style="">
+        <div class="col-md-12">
           <div class="p-2" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
             <button id="connectWallet" class="btn btn-dark shadowed rounded-0 btn-lg">Connect wallet</button>
             <button id="disconnectWallet" class="btn btn-dark shadowed rounded-0" style="display: none;">Disconnect</button>
             <div class="dashstats" style="display: none;">
               <div class="row">
-                <div class="col-md-4 col-4" style="	min-width: 369px;" >
+                <div class="col-md-4 col-4" style=" min-width: 369px;">
                   <div class="p-3 col-md-12" style="">
                     <div class="card">
-                      <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+                      <div class="card-body p-3" style=" background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)); background-position: top left;	background-size: 100%;	background-repeat: repeat;">
                         <h4>Distributor Stats</h4>
                         <div class="walletStats">
                           <p class="walletbalance">Contract Balance: <span class="bnbBalanceVal">0</span> BNB</p>
@@ -66,6 +66,10 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12" style="">
         </div>
       </div>
     </div>
