--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </nav>
   <!-- Cover -->
-  <div class="d-flex align-items-center py-5 photo-overlay cover" style=" background-image: url(assets/BGs/ethereum-art.jpg); background-position: center;	background-size: cover;	background-repeat: no-repeat;" >
+  <div class="d-flex align-items-center py-5 photo-overlay cover" style=" background-image: url(assets/BGs/ethereum-art.jpg); background-position: center;	background-size: cover;	background-repeat: no-repeat;">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -59,6 +59,21 @@
                           <p class="walletbalance">Contract Balance: <span class="bnbBalanceVal">0</span> BNB</p>
                           <button id="collectReflectsInBeans" class="btn btn-dark shadowed rounded-0" onclick="distribute()">Distribute</button>
                         </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 col-4" style="	min-width: 369px;">
+                <div class="p-3 col-md-12 align-items-center" style="">
+                  <div class="card">
+                    <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+                      <h4 class="text-warning">NFT Giveaway Utility</h4>
+                      <div class="RewardHolders p-2 text-light">
+                        <p class="rewardtoken"><span>Input NFT Holders to Reward</span>
+                          <input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br>
+                          <button id="RewardNFT" class="btn btn-dark shadowed rounded-0" onclick="rewardHolders()"><b>Send NFTs to Holders</b></button>
+                        </p>
                       </div>
                     </div>
                   </div>
@@ -103,6 +118,7 @@
   <script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
   <script type="text/javascript" src="https://unpkg.com/@walletconnect/web3-provider@1.7.8/dist/umd/index.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
+
 </body>
 
 </html>
