--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
   <link rel="icon" href="">
-  <title>Instawin Scratcher Central Command</title>
+  <title>NinjaTech Central Command</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
   <!-- CSS dependencies -->
@@ -64,16 +64,18 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-4 col-4" style="	min-width: 369px;">
-                <div class="p-3 col-md-12 align-items-center" style="">
-                  <div class="card">
-                    <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-                      <h4 class="text-warning">NFT Giveaway Utility</h4>
-                      <div class="RewardHolders p-2 text-light">
-                        <p class="rewardtoken"><span>Input NFT Holders to Reward</span>
-                          <input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br>
-                          <button id="RewardNFT" class="btn btn-dark shadowed rounded-0" onclick="rewardHolders()"><b>Send NFTs to Holders</b></button>
-                        </p>
+              <div class="row">
+                <div class="col-md-4 col-4" style="	min-width: 369px;">
+                  <div class="p-3 col-md-12 align-items-center" style="">
+                    <div class="card">
+                      <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+                        <h4 class="text-warning">NFT Giveaway Utility</h4>
+                        <div class="RewardHolders p-2 text-light">
+                          <p class="rewardtoken"><span>Input NFT Holders to Reward</span>
+                            <input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br>
+                            <button id="RewardNFT" class="btn btn-dark shadowed rounded-0" onclick="rewardHolders()"><b>Send NFTs to Holders</b></button>
+                          </p>
+                        </div>
                       </div>
                     </div>
                   </div>
