--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   <div class="p-3 col-md-12 align-items-center" style="">
                     <div class="card">
                       <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-                        <h4 class="text-warning">NFT Giveaway Utility</h4>
+                        <h4>NFT Giveaway Utility</h4>
                         <div class="RewardHolders p-2 text-light">
                           <p class="rewardtoken"><span>Input NFT Holders to Reward</span>
                             <input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br>
