--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </nav>
   <!-- Cover -->
-  <div class="d-flex align-items-center py-5 photo-overlay cover" style="	background-image: url(assets/BGs/BG1.jpg);	background-position: center;	background-size: cover;	background-repeat: no-repeat;">
+  <div class="d-flex align-items-center py-5 photo-overlay cover" style=" background-image: url(assets/BGs/BG1.jpg); background-position: center; background-size: cover; background-repeat: no-repeat;">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -53,7 +53,7 @@
                 <div class="col-md-4 col-4" style=" min-width: 369px;">
                   <div class="p-3 col-md-12" style="">
                     <div class="card">
-                      <div class="card-body p-3" style=" background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)); background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+                      <div class="card-body p-3" style=" background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)); background-position: top left; background-size: 100%;	background-repeat: repeat;">
                         <h4>Distributor Stats</h4>
                         <div class="walletStats">
                           <p class="walletbalance">Contract Balance: <span class="bnbBalanceVal">0</span> BNB</p>
@@ -65,14 +65,18 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-4 col-4" style="	min-width: 369px;">
+                <div class="col-md-4 col-4" style=" min-width: 369px;">
                   <div class="p-3 col-md-12 align-items-center" style="">
                     <div class="card">
-                      <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+                      <div class="card-body p-3" style=" background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)); background-position: top left; background-size: 100%;	background-repeat: repeat;">
                         <h4>NFT Giveaway Utility</h4>
                         <div class="RewardHolders p-2 text-light">
                           <p class="rewardtoken"><span>Input NFT Holders to Reward</span>
-                            <input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br><input id="RewardNFT" type="text"><br>
+                            <input id="RewardNFT" type="text"><br>
+                            <input id="RewardNFT" type="text"><br>
+                            <input id="RewardNFT" type="text"><br>
+                            <input id="RewardNFT" type="text"><br>
+                            <input id="RewardNFT" type="text"><br>
                             <button id="RewardNFT" class="btn btn-dark shadowed rounded-0" onclick="rewardHolders()"><b>Send NFTs to Holders</b></button>
                           </p>
                         </div>
@@ -83,7 +87,7 @@
                 <div class="col-md-4 col-4" style="	min-width: 369px;">
                   <div class="p-3 col-md-12 align-items-center" style="">
                     <div class="card">
-                      <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+                      <div class="card-body p-3" style=" background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)); background-position: top left; background-size: 100%;	background-repeat: repeat;">
                         <h4>NFT Rewards Utility</h4>
                         <div class="RewardHolders p-2">
                           <p class="holdersrewards"><span>NFT Holders to Reward</span><br>
@@ -91,7 +95,8 @@
                           <p class="rewardamount"><span> Amount to Reward (BNB)</span><br>
                             <input id="bnbRewardAmount" type="number" min="0.01" step="0.01"></p>
                           <p class="rewardtoken"><span>Input Token to Reward</span>
-                            <input id="RewardToken" type="text"><br><button id="RewardHolders" class="btn btn-dark shadowed rounded-0" onclick="rewardHolders()">Reward Holders in Token</button></p>
+                            <input id="RewardToken" type="text"><br>
+                            <button id="RewardHolders" class="btn btn-dark shadowed rounded-0" onclick="rewardHolders()">Reward Holders in Token</button></p>
                         </div>
                       </div>
                     </div>
