--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-4 col-4" style="	min-width: 369px;">
+                <div class="col-md-4 col-4" style=" min-width: 369px;">
                   <div class="p-3 col-md-12 align-items-center" style="">
                     <div class="card">
                       <div class="card-body p-3" style=" background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)); background-position: top left; background-size: 100%;	background-repeat: repeat;">
@@ -81,7 +81,7 @@
                             <input id="bnbRewardAmount" type="number" min="0.01" step="0.01"></p>
                           <p class="rewardtoken"><span>Input Token to Reward</span>
                             <input id="RewardToken" type="text"><br>
-                            <button id="RewardHolders" class="btn btn-dark shadowed rounded-0" onclick="rewardHolders()">Reward Holders in Token</button></p>
+                            <button id="RewardHolders" class="btn btn-dark shadowed rounded-0" onclick="rewardHolders()"><b>Reward Holders in Token</b></button></p>
                         </div>
                       </div>
                     </div>
@@ -91,11 +91,11 @@
                   <div class="col-md-4 col-4" style=" min-width: 369px;">
                     <div class="p-3 col-md-12" style="">
                       <div class="card">
-                        <div class="card-body p-3" style=" background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)); background-position: top left; background-size: 100%;	background-repeat: repeat;">
+                        <div class="card-body p-3" style=" background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)); background-position: top left; background-size: 100%; background-repeat: repeat;">
                           <h4>Distributor Stats</h4>
                           <div class="walletStats">
                             <p class="walletbalance">Contract Balance: <span class="bnbBalanceVal">0</span> BNB</p>
-                            <button id="collectReflectsInBeans" class="btn btn-dark shadowed rounded-0" onclick="distribute()">Distribute</button>
+                            <button id="collectReflectsInBeans" class="btn btn-dark shadowed rounded-0" onclick="distribute()"><b>Distribute</b></button>
                           </div>
                         </div>
                       </div>
